force-app/main/default/objects/MSN_Allowed_ScheduleItems__c/MSN_Allowed_ScheduleItems__c.object-meta.xml
<CustomObject>
    <description>Schedule Items (aka &quot;RFP Codes&quot;) are used by MSN/Watercare in subsequent systems (e.g.EAM) in diverse finance processes and are used e.g. to define allowed costs for certain activities on a contractor &quot;Contract Schedule&quot; agreed with Watercare. In Salesforce, we use this object as a master-detail relationship to Work Type and it is used to define all available Schedule Items, that a field crew should be able to choose from when completing a job of a  specific &quot;Work Type&quot; (=Activity Code) in order to determine what exactly they did on the job.</description>
    <label>Allowed Schedule Item</label>
    <nameField>
        <displayFormat>ASI-{0000}</displayFormat>
        <label>Allowed Schedule Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Allowed Schedule Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>