force-app/main/default/objects/MSN_Allowed_ScheduleItems__c/fields/MSN_ScheduleItem_Description__c.field-meta.xml
<CustomField>
    <fullName>MSN_ScheduleItem_Description__c</fullName>
    <description>Used to store a short description for the &quot;Schedule Item&quot; (aka &quot;RFP Code&quot;).</description>
    <inlineHelpText>Please enter a short description for the Schedule Item (aka &quot;RFP Code&quot;).</inlineHelpText>
    <label>Item Description</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>