force-app/main/default/objects/MSN_Allowed_ScheduleItems__c/fields/MSN_Service_Product_Code__c.field-meta.xml
<CustomField>
    <fullName>MSN_Service_Product_Code__c</fullName>
    <description>Legacy &quot;Service Product Code&quot; (SPC) Code. This was used in MSN finance processes (SAP) and is kept here for temporary finance reporting contingency. Replaced by the new &quot;Schedule Items&quot; (on a Contract Schedule), also known as &quot;RFP Code&quot;.</description>
    <label>Service Product Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>