force-app/main/default/objects/MSN_Allowed_ScheduleItems__c/fields/MSN_Work_Type__c.field-meta.xml
<CustomField>
    <fullName>MSN_Work_Type__c</fullName>
    <description>Master-Detail Relationship to the &quot;Work Type&quot; object in order to link the Allowed Schedule Item to its parent Work Type.</description>
    <label>Work Type</label>
    <referenceTo>WorkType</referenceTo>
    <relationshipLabel>Allowed Schedule Items</relationshipLabel>
    <relationshipName>Allowed_Schedule_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>